# PL_PRS_Kissat_HyPre

./: CLAUDE.md  Dockerfile  Makefile  run_solver.sh  solver_cmd.py
solvers/kissat_mab_hypre/: build.sh  clear.sh  kissat  makefile.in  rebuild.sh  remove.py  result.txt  run.py  run.sh  run0.py  run0.sh  stat.py  verifysat.py
solvers/kissat_mab_hypre/Satsuma/: CMakeLists.txt  cnf.h  group_analyzer.h  parser.h  predicate.h  proof.h  satsuma.cpp  satsuma.h  simplify.h
solvers/kissat_mab_hypre/VeriPB/: CHANGELOG.md  Cargo.toml  README.md  migration_guide.md  proof_format_overview.md
solvers/kissat_mab_hypre/VeriPB/src/: args.rs  context.rs  database.rs  deletion_sequence.rs  elaborator.rs  error.rs  lib.rs  misc_tokens.rs  occurrence_list.rs  order.rs  order_context.rs  prelude.rs  proofgoal.rs  rules.rs  subproof_context.rs  utils.rs  verifier.rs
solvers/kissat_mab_hypre/VeriPB/src/parser/: error.rs  lexer.rs  mod.rs  parser.rs  utils.rs
solvers/kissat_mab_hypre/VeriPB/src/rules/: assumption.rs  comment.rs  conclusion.rs  core.rs  cutting_planes.rs  define_order.rs  deletion.rs  dom_strengthening.rs  end_proof.rs  end_subproof.rs  equal_objective.rs  equals.rs  fail.rs  formula.rs  header.rs  implication.rs  is_deleted.rs  load_order.rs  objective_update.rs  order_aux_vars.rs  order_def.rs  order_def_constraint.rs  order_fresh_aux1.rs  order_fresh_aux2.rs  order_fresh_right_vars.rs  order_left_vars.rs  order_proof.rs  order_reflexivity.rs  order_right_vars.rs  order_specification.rs  order_transitivity.rs  order_vars.rs  output.rs  proof_by_contradiction.rs  proofgoal.rs  red_strengthening.rs  rup.rs  scope.rs  set_level.rs  solution_logging.rs  (+2 more)
solvers/kissat_mab_hypre/VeriPB/veripb-formula/: CHANGELOG.md  Cargo.toml  README.md
solvers/kissat_mab_hypre/VeriPB/veripb-formula/benches/: lit.rs  var_set.rs
solvers/kissat_mab_hypre/VeriPB/veripb-formula/src/: assignment.rs  boolean_var.rs  cardinality.rs  clause.rs  db_constraint.rs  fat_pb_constraint.rs  formula.rs  general_pb_constraint.rs  general_pb_term.rs  helper.rs  lib.rs  lit.rs  pb_constraint.rs  pb_objective.rs  pb_term.rs  prelude.rs  substitution.rs  to_pretty_string.rs  var_name_manager.rs  var_type.rs
solvers/kissat_mab_hypre/VeriPB/veripb-parser/: CHANGELOG.md  Cargo.toml  README.md
solvers/kissat_mab_hypre/VeriPB/veripb-parser/examples/: cnf_stats.rs  opb_stats.rs  wcnf_stats.rs
solvers/kissat_mab_hypre/VeriPB/veripb-parser/src/: assignment_parser.rs  assignment_token.rs  cnf_parser.rs  cnf_token.rs  error.rs  lib.rs  opb_parser.rs  opb_token.rs  parser.rs  substitution_parser.rs  substitution_token.rs  wcnf_parser.rs  wcnf_token.rs
solvers/kissat_mab_hypre/VeriPB/veripb-propagator/: CHANGELOG.md  Cargo.toml  README.md
solvers/kissat_mab_hypre/VeriPB/veripb-propagator/src/: cardinality_watcher.rs  clause_watcher.rs  error.rs  general_pb_watcher.rs  lib.rs  propagation_engine.rs  propagation_set.rs  propagator.rs  trail.rs  watcher.rs
solvers/kissat_mab_hypre/src/: analyze.c  application.c  backtrack.c  bump.c  bump.h  compact.c  congruence.c  decide.c  dump.c  file.c  file.h  flags.c  internal.c  internal.h  options.h  proof.c  proof.h  propsearch.c  resize.c  restart.c  simplify.c  simplify.h  stack.h  tiers.c  tiers.h  transitive.c  witness.c
solvers/kissat_mab_hypre/test/: configure
solvers/passat/: Makefile  basis.h  build.h  cca.h  cw.h  preprocessor.h  result-sat.txt  sat_solver.cpp  sat_solver.h
src/preprocessors/PRS-Preprocessors/utils-prs/: parse.cpp
src/solvers/: SolverFactory.cpp
src/solvers/CDCL/: Cadical.cpp  GlucoseSyrup.cpp  Kissat.cpp  KissatMABHyPreSolver.cpp  KissatMABHyPreSolver.hpp  Lingeling.cpp  MapleCOMSPSSolver.cpp  MiniSat.cpp
src/solvers/LocalSearch/: LocalSearchInterface.hpp  PASSAT.cpp  PASSAT.hpp
src/utils/: Parameters.cpp  System.cpp
