[package]
name = "veripb-formula"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "README.md"
description = "VeriPB library to handle pseudo-Boolean constraints, formulas, and more data structures."
categories = ["data-structures"]


[dependencies]
ahash = "0.8.11"
malachite-bigint = "0.5.0"
num-integer = "0.1.46"
num-traits = "0.2.19"
smartstring = "1.0.1"
spire_enum = "0.7.1"


[dev-dependencies]
criterion = "0.7.0"
rand = "0.9.2"


[lib]
name = "veripb_formula"
path = "src/lib.rs"
crate-type = ["rlib"]


# Define micro benchmarks
[[bench]]
name = "var_set"
harness = false

[[bench]]
name = "lit"
harness = false
